api linki inputlara göre oluşturuldu ve istek atıldı.

--- a/index.html
+++ b/index.html
@@ -44,8 +44,17 @@
             id="end-date"
             name="end-date"
             max="2020-06-19 00:00:00"
+            min="2020-06-02 00:00:00"
           />
-          <button class="calcAqi" role="button">Calculate AQI</button>
+          <br />
+          <button
+            id="submit-button"
+            class="calcAqi"
+            role="button"
+            type="submit"
+          >
+            Calculate AQI
+          </button>
         </div>
       </div>
       <div id="flex-bottom">
