link tekrar düzenlendi.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="Muzafer Bulut" />
     <script src="js/getMap.js" defer></script>
     <script src="js/getAqi.js" defer></script>
+    <script src="js/drawChart.js" defer></script>
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
