array yapıları hazırlandı.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Air Quality Management Portal</title>
     <meta name="author" content="Muzafer Bulut" />
     <script src="js/getMap.js" defer></script>
-    <script src="js/getChart.js" defer></script>
+    <script src="js/getCharts.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
     <link
       rel="stylesheet"
