doughnut chart eklendi

--- a/index.html
+++ b/index.html
@@ -62,8 +62,12 @@
         <div id="bar-chart">
           <canvas id="barChart"></canvas>
         </div>
-        <div id="doughnut-chart"></div>
-        <div id="line-chart"></div>
+        <div id="doughnut-chart">
+          <canvas id="doughnutChart"> </canvas>
+        </div>
+        <div id="line-chart">
+          <canvas id="lineChart"> </canvas>
+        </div>
       </div>
     </div>
   </body>
